--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,13 +4,14 @@
   align-items: center;
   flex-direction: column;
   margin: 0;
+  color: white;
 }
 
 .nav {
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  background-color: black;
+  background-color: rgb(59, 3, 120);
   margin: 0px;
 }
 
@@ -44,8 +45,10 @@
 }
 
 .description {
-  color: rgb(115, 115, 115);
-  font-weight: lighter;
+}
+
+.limeColor {
+  color: rgb(191, 255, 15);
 }
 
 .input {
@@ -55,4 +58,20 @@
   border: 1px solid rgb(209, 209, 209);
   padding-left: 10px;
   font-size: 16px;
+}
+
+.artistsContainer {
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
+.artistInfo {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+  max-width: 160px;
 }
